add routing and auth page (signin, signup, 404page)

--- a/src/pages/BoardPage/BoardStyle.css
+++ b/src/pages/BoardPage/BoardStyle.css
@@ -42,5 +42,11 @@ code {
 .card {
     box-shadow: rgba(0, 0, 0, 0.08) 0px 2px 2px 3px;
     border-radius: .4rem;
-    min-height: 200px;
+}
+
+.empty-content {
+    height: 100px;
+    border: 2px dotted #80808085;
+    border-radius: .5rem;
+    color: #808080b8;
 }
