--- a/src/pages/BoardPage/BoardStyle.css
+++ b/src/pages/BoardPage/BoardStyle.css
@@ -41,7 +41,11 @@ code {
 
 .card {
     box-shadow: rgba(0, 0, 0, 0.08) 0px 2px 2px 3px;
-    border-radius: .4rem;
+    border-radius: .6rem;
+}
+.card .card-img {
+    border-top-left-radius:  .6rem;
+    border-top-right-radius:  .6rem;
 }
 
 .empty-content {
@@ -59,4 +63,58 @@ code {
     margin: .1rem;
     text-shadow: 0px 0px 5px black;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
+}
+
+.img-user-sm {
+    border-radius: 50%;
+    max-width: 1.5rem;
+}
+
+.img-user-md {
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+}
+
+.img-user-lg {
+    border-radius: 50%;
+    border: 5px solid #80808085;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .2);
+    max-width: 15rem;
+    width: 70%;
+}
+
+.username-badge{
+    background-color: #f0f8ff54;
+    border: none;
+    font-size: larger;
+    border-radius: 5rem;
+    bottom: 0;
+    left: 0;
+}
+
+.user-hero{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.nav-pills{
+    background-color: #ffffff82;
+    border-radius: 5rem;
+}
+.nav-pills .nav-link {
+    border-radius: 5rem;
+    font-size: larger;
+    font-weight: bold;
+    color: black;
+}
+
+.btn-first-pill{
+    border-radius: 1rem 0 0 1rem!important;
+}
+
+.btn-last-pill{
+    border-radius: 0 1rem 1rem 0!important;
 }
